--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  // padding: 2rem;
+  font-family: "Helvetica Neue", sans-serif;
   display: flex;
   place-items: center;
   justify-content: center;
